[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/ui_split.png" type="Texture" id=1]
[ext_resource path="res://Main_button_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/GUI/Main_menu.gd" type="Script" id=3]

[node name="Main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_ground" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="back_ground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -172.5
margin_right = 125.0
margin_bottom = 172.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial_button" type="TextureButton" parent="back_ground/VBoxContainer"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="back_ground/VBoxContainer/tutorial_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="back_ground/VBoxContainer/tutorial_button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
region_rect = Rect2( 84.8933, 12.6979, 57.4913, 18.3791 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_ground/VBoxContainer/tutorial_button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 24.0
margin_right = -72.0
margin_bottom = -25.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Tutorial"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_button" type="TextureButton" parent="back_ground/VBoxContainer"]
margin_top = 104.0
margin_right = 250.0
margin_bottom = 204.0
rect_min_size = Vector2( 250, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="back_ground/VBoxContainer/Start_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="back_ground/VBoxContainer/Start_button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
region_rect = Rect2( 84.8933, 12.6979, 57.4913, 18.3791 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_ground/VBoxContainer/Start_button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 24.0
margin_right = -72.0
margin_bottom = -25.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
align = 1
valign = 1

[node name="option_button" type="TextureButton" parent="back_ground/VBoxContainer"]
margin_top = 208.0
margin_right = 250.0
margin_bottom = 308.0
rect_min_size = Vector2( 250, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorRect2" type="ColorRect" parent="back_ground/VBoxContainer/option_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="back_ground/VBoxContainer/option_button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
region_rect = Rect2( 84.8933, 12.6979, 57.4913, 18.3791 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_ground/VBoxContainer/option_button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 24.0
margin_right = -72.0
margin_bottom = -25.0
custom_fonts/font = ExtResource( 2 )
text = "Option"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_button" type="TextureButton" parent="back_ground/VBoxContainer"]
margin_top = 312.0
margin_right = 250.0
margin_bottom = 412.0
rect_min_size = Vector2( 250, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ColorRect3" type="ColorRect" parent="back_ground/VBoxContainer/exit_button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="back_ground/VBoxContainer/exit_button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
region_rect = Rect2( 84.8933, 12.6979, 57.4913, 18.3791 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_ground/VBoxContainer/exit_button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 24.0
margin_right = -72.0
margin_bottom = -25.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
align = 1
valign = 1

[node name="options" type="Panel" parent="back_ground"]
visible = false
margin_left = 316.0
margin_top = 43.0
margin_right = 708.0
margin_bottom = 546.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volumen" type="HSlider" parent="back_ground/options"]
margin_top = 97.4453
margin_right = 374.0
margin_bottom = 205.445
min_value = -60.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_ground/options/Volumen"]
margin_top = -2.84998
margin_right = 164.0
margin_bottom = 43.15
custom_fonts/font = ExtResource( 2 )
text = "Volumen"

[node name="Music" type="HSlider" parent="back_ground/options"]
margin_top = 202.126
margin_right = 374.0
margin_bottom = 310.126
min_value = -60.0
max_value = 0.0

[node name="Label" type="Label" parent="back_ground/options/Music"]
margin_top = -2.84998
margin_right = 164.0
margin_bottom = 43.15
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="SFX" type="HSlider" parent="back_ground/options"]
margin_top = 302.929
margin_right = 374.0
margin_bottom = 410.929
min_value = -60.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_ground/options/SFX"]
margin_top = -2.84998
margin_right = 164.0
margin_bottom = 43.15
custom_fonts/font = ExtResource( 2 )
text = "SFX"

[node name="option_exit_button" type="TextureButton" parent="back_ground/options"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -112.924
margin_right = 125.0
margin_bottom = -12.9235
rect_min_size = Vector2( 250, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="back_ground/options/option_exit_button"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
region_rect = Rect2( 84.8933, 12.6979, 57.4913, 18.3791 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="back_ground/options/option_exit_button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = 24.0
margin_right = -72.0
margin_bottom = -25.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
align = 1
valign = 1
[connection signal="mouse_entered" from="back_ground/VBoxContainer/tutorial_button" to="." method="_on_tutorial_button_mouse_entered"]
[connection signal="mouse_exited" from="back_ground/VBoxContainer/tutorial_button" to="." method="_on_tutorial_button_mouse_exited"]
[connection signal="pressed" from="back_ground/VBoxContainer/tutorial_button" to="." method="_on_tutorial_button_pressed"]
[connection signal="mouse_entered" from="back_ground/VBoxContainer/Start_button" to="." method="_on_Start_button_mouse_entered"]
[connection signal="mouse_exited" from="back_ground/VBoxContainer/Start_button" to="." method="_on_Start_button_mouse_exited"]
[connection signal="pressed" from="back_ground/VBoxContainer/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="mouse_entered" from="back_ground/VBoxContainer/option_button" to="." method="_on_option_button_mouse_entered"]
[connection signal="mouse_exited" from="back_ground/VBoxContainer/option_button" to="." method="_on_option_button_mouse_exited"]
[connection signal="pressed" from="back_ground/VBoxContainer/option_button" to="." method="_on_option_button_pressed"]
[connection signal="mouse_entered" from="back_ground/VBoxContainer/exit_button" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="back_ground/VBoxContainer/exit_button" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="back_ground/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="back_ground/options/Volumen" to="." method="_on_Volumen_value_changed"]
[connection signal="value_changed" from="back_ground/options/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="back_ground/options/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="back_ground/options/option_exit_button" to="." method="_on_option_exit_button_pressed"]
